	PR other/13906 	* ansidecl.h (ATTRIBUTE_ALIGNED_ALIGNOF): New. 	* md5.h (md5_uintptr): New. 	(md5_ctx): Align buffer field.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@101556 138bc75d-0d04-0410-961f-82ee72b054a4